# pydle

./: pyproject.toml
pydle/: client.py  connection.py
pydle/utils/: irccat.py  run.py
