[project]
name = "pydle"
version = "1.0.1"
description = "A compact, flexible, and standards-abiding IRC library for python3."
authors = [{ name = "Shiz", email = "hi@shiz.me" }]
keywords = ["irc", "library", "python3", "compact", "flexible"]
#license = "BSD-3-Clause"
requires-python = ">=3.10"

[dependency-groups]
dev = ["sphinx-rtd-theme>=1.0.0", "Sphinx>=5.0.2"]

[project.optional-dependencies]
sasl = ["pure-sasl>=0.6.2"]

[project.scripts]
pydle = "pydle.utils.run:main"
pydle-irccat = 'pydle.utils.irccat:main'
